# livekit-test-ai-interview

./: README.md  agent.py  ai_interview_db.sqlite  api.py  config.py  db_driver.py  docker-compose.yml  prompts.py  pyproject.toml  requirements.txt  server.py
public/: interview.html
